--- a/package.json
+++ b/package.json
@@ -10,29 +10,29 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "react": "17.0.2",
-    "react-native": "0.68.1",
-    "react-native-webview": "11.17.2",
-    "react-native-sha256": "^1.4.7",
-    "react-native-screens": "^3.9.0",
-    "react-native-reanimated": "2.7.0",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-elements": "^3.4.2",
-    "react-native-config": "^1.4.5",
+    "@react-native-async-storage/async-storage": "^1.15.11",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
     "axios": "^0.24.0",
     "lodash": "^4.17.21",
-    "@react-navigation/native-stack": "^6.2.5",
-    "@react-navigation/native": "^6.0.6",
-    "@react-native-async-storage/async-storage": "^1.15.11",
-    "react-native-safe-area-context": "^3.3.2"
+    "react": "17.0.2",
+    "react-native": "0.68.1",
+    "react-native-config": "^1.4.5",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "2.7.0",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.9.0",
+    "react-native-sha256": "^1.4.7",
+    "react-native-webview": "11.17.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
+    "@babel/eslint-parser": "^7.16.5",
     "@babel/runtime": "^7.17.9",
     "@react-native-community/eslint-config": "^3.0.1",
     "babel-jest": "^28.0.3",
     "eslint": "7.8.0",
-    "@babel/eslint-parser": "^7.16.5",
     "jest": "^28.0.3",
     "metro-react-native-babel-preset": "^0.70.3",
     "react-test-renderer": "17.0.2"
