--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
     "react-native-config": "^1.4.5",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-i18n": "^2.0.15",
     "react-native-reanimated": "2.7.0",
-    "react-native-safe-area-context": "^3.3.2",
+    "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.9.0",
     "react-native-sha256": "^1.4.7",
-    "react-native-webview": "11.17.2"
+    "react-native-vector-icons": "^9.1.0",
+    "react-native-webview": "11.17.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "reselect": "^4.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
